[package]
name = "ctl-rs"
version = "0.1.0"
authors = ["Adam Brady <adam@boxxen.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
reqwest = "0.10.6"
futures = "0.3.5"
tokio = { version = "0.2.22", features = [ "full" ] }
serde = { version = "1.0.114", features = [ "derive" ] }
serde_json = "1.0.56"
spinners = "1.2.0"
